<resources>
    <string name="app_name">Sar Sogune</string>
    <string name="msg_please_check_internet">please check your internet connection</string>
    <string name="txt_enterEmail">Enter email</string>
    <string name="txt_enterPassword">Enter password</string>
    <string name="txt_loginWith">Login with</string>
    <string name="txt_forgotPassword">Forgot password?</string>
    <string name="txt_create_new_account">Create new account</string>
    <string name="txt_login">Login</string>
    <string name="txt_sor_sagun">Sor Sagun</string>
    <string name="txt_enter_your_name">Enter your name</string>
    <string name="txt_enter_new_password">Enter new password</string>
    <string name="txt_confirm_password">Confirm password</string>
    <string name="txt_create">Create</string>
    <string name="txt_enterValid_email">Please enter valid email</string>
    <string name="txt_enterValid_name">Please enter valid name</string>
    <string name="txt_enterValid_password">Please enter valid password</string>
    <string name="text_password_doesNot_match">Password does not match</string>
    <string name="txt_success_account">Congratulation your account created you can login now</string>
    <string name="msg_something_went">Sorry something went wrong try after  some time</string>
    <string name="msg_plz_enter_valid_login_id">Please enter valid login details</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_openDrawer">Open Navigation drawer</string>
    <string name="txt_closeDrawer">Close Navigation drawer</string>
    <string name="txt_notification">Notification</string>
    <string name="txt_profile">Profile</string>
    <string name="msg_are_you_sure_want_to_logout">Are your sure want to logout?</string>
    <string name="text_aboutUs">About us</string>
    <string name="txt_contact_us">Admin</string>
    <string name="txt_fullImage">Full Image</string>
    <string name="txt_privacy_policy">Privacy policy</string>
    <string name="msg_discover_your_patner">Discover your Perfect Patner.</string>
    <string name="txt_create_account">Create Account</string>
    <string name="msg_i_agree_with_th">I agree with the Terms Condition &amp; Privacy Policy</string>
    <string name="txt_gender">Gender</string>
    <string name="msg_plz_select_gender">Please Select Gender</string>
    <string name="msg_server_error">Server is down now please try after some time</string>
    <string name="txt_enter_privacy_policy">Enter your privacy policy</string>
    <string name="txt_proposals">Proposals</string>
    <string name="txt_myAccount">My Account</string>
    <string name="msg_make_changes_to">Make changes to your account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_further_secure">Further secure your account for safety</string>
    <string name="txt_get_all_users_location">Get all users location</string>
    <string name="lbl_help_support">Help &amp; Support(Customer Care)</string>
    <string name="msg_account_verfica">Account Verification</string>
    <string name="txt_location_on_map">Location on map</string>
    <string name="ms_help_support">Get support and help from out team</string>
    <string name="lbl_about_app">About App</string>
    <string name="msg_about_app">Know more about our app</string>
    <string name="msg_about_us">Know more about our us</string>
    <string name="msg_contact_us">contact to our admin for more details</string>
    <string name="txt_more">More</string>
    <string name="txt_no_data_found">No data found.</string>
    <string name="txt_enter_contact_no">Enter contact number</string>
    <string name="text_enter_dob">Enter date of birth</string>
    <string name="text_enter_gusti">Enter  gusti</string>
    <string name="txt_enter_candidate_name">Enter candidate name</string>
    <string name="txt_enter_father_name">Enter Father Name</string>
    <string name="txt_enter_mother_name">Enter Mother Name</string>
    <string name="txt_enter_qualification">Enter Qualification</string>
    <string name="txt_enter_profession">Enter Profession</string>
    <string name="txt_enter_your_address">Enter Your Address</string>
    <string name="txt_gps_location">GPS Location</string>
    <string name="txt_add">Add</string>
    <string name="txt_view">View</string>
    <string name="txt_add_images">Add Images</string>
    <string name="text_upload">Upload</string>
    <string name="txt_update_profile">Update Profile</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_reject">Reject</string>
    <string name="txt_marital_status">Marital status</string>
    <string name="txt_enter_candidate_height">Enter Candidate Height</string>
    <string name="txt_what_religion">Religion</string>
    <string name="txt_what_language_known">What languages known</string>
    <string name="msg_do_you_want_kudmal_tradition_ma">I agree with No dowry and marraige with Kudmali customary law</string>
    <string name="txt_search_gusti">Search Gusti Name</string>
    <string name="txt_search">Search</string>
    <string name="fir_Name">Name</string>
    <string name="fir_CandidateName">CandidateName</string>
    <string name="fir_FatherName">FatherName</string>
    <string name="fir_MotherName">MotherName</string>
    <string name="fir_ContactNo">ContactNo</string>
    <string name="fir_DOB">DOB</string>
    <string name="fir_Gender">Gender</string>
    <string name="fir_MartialStatus">MartialStatus</string>
    <string name="fir_LanguageKnown">LanguageKnown</string>
    <string name="fir_CandidateHeight">CandidateHeight</string>
    <string name="fir_Gusti">Gusti</string>
    <string name="fir_Qualification">Qualification</string>
    <string name="fir_Profession">Profession</string>
    <string name="fir_Address">Address</string>
    <string name="fir_Users">Users</string>
    <string name="fir_user_id">UserId</string>
    <string name="fir_notification_token">Notification Token</string>
    <string name="fir_profileImage">ProfileImage</string>
    <string name="fir_aboutMe">About me</string>
    <string name="fir_manglik">Manglik</string>
    <string name="fir_consume_alcohol">ConsumeAlcohol</string>
    <string name="fir_smoke">Smoke</string>
    <string name="fir_candidateImages">CandidateImages</string>
    <string name="msg_upload_any_document">Upload your any document proof</string>
    <string name="txt_save">Save</string>
    <string name="txt_select">Select</string>
    <string name="txt_Kudmali_marraige">KudmaliMarraige</string>
    <string name="fir_requested">Requested</string>
    <string name="fir_isSuperAdmin">IsSuperAdmin</string>
    <string name="fir_isAdmin">IsAdmin</string>
    <string name="txt_send_proposal">Send Proposal</string>
    <string name="txt_requested">Requested</string>
    <string name="txt_are_you_manglik">Are you manglik ?</string>
    <string name="txt_do_you_consume_alcohol">Do you consume alcohol ?</string>
    <string name="txt_do_you_smoke">Do you smoke ?</string>
    <string name="text_about_me">About me</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_key">AIzaSyCLNyzdRSsuwdF50s4ldSwgvN6KcwUIcUk</string>
    <string name="fir_account_password">AccountPassword</string>
    <string name="shard_pre_pass">PASSWORD</string>
    <string name="txt_password_type">Password should be minimum 6 digits, contains upper, lowercase,number, and a special character Ex-Alkusi2002@</string>
   <string name="fir_time_stamp">TimeStamp</string>
    <string name="fir_latitude">latitude</string>
    <string name="fir_longitude">longitude</string>
    <string name="fir_locations">Locations</string>
    <string name="fir_festival">Festival</string>
    <string name="fir_festival_details">Details</string>
    <string name="fir_festival_image">FestivalImage</string>
</resources>

