<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/toolbar"
    android:background="@drawable/loging_bg"
    tools:context=".AllActivity.LoginActivity">

            <RelativeLayout
                android:id="@+id/topRRll"
                android:layout_marginHorizontal="20dp"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/progressbar"
                    android:indeterminateTint="@color/yellow"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="Login Here"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:textColorHint="@color/black"
                        android:hint="@string/txt_enterEmail"
                        android:outlineSpotShadowColor="@color/black"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"

                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:textColorHint="@color/black"
                        android:hint="@string/txt_enterPassword"
                        android:outlineSpotShadowColor="@color/black"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textColor="@color/black"

                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--                 <CheckBox-->
                    <!--                     android:id="@+id/checkAge"-->
                    <!--                     android:layout_marginTop="10dp"-->
                    <!--                     android:layout_gravity="center_horizontal"-->
                    <!--                     android:text="Yes i am above 18 years old"-->
                    <!--                     android:layout_width="wrap_content"-->
                    <!--                     android:layout_height="wrap_content"/>-->
                    <!--                 <RadioButton-->
                    <!--                     android:id="@+id/btnCheck"-->
                    <!--                     android:layout_marginTop="10dp"-->
                    <!--                     android:layout_marginHorizontal="20dp"-->
                    <!--                     android:text="@string/msg_i_agree_with_th"-->
                    <!--                     android:layout_width="match_parent"-->
                    <!--                     android:layout_height="wrap_content"/>-->
                    <TextView

                        android:id="@+id/txtForgotPassword"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:gravity="right"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/txt_forgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <android.widget.Button
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/bg_login_btn"
                        android:id="@+id/btnLogin"
                        android:text="@string/txt_login"
                        android:textColor="@color/white"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>

                </LinearLayout>
            </RelativeLayout>

        <android.widget.Button
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
           android:layout_alignParentBottom="true"
            android:id="@+id/btnNewAccount"
            android:text="@string/txt_create_new_account"
            android:background="@drawable/bg_sign_up_btn"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp"

            android:layout_width="match_parent"
            android:layout_height="50dp"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/topRRll"
        android:id="@+id/imgLove"
        android:layout_width="150dp"
        android:layout_height="150dp"
android:fitsSystemWindows="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_top" />





</RelativeLayout>
</layout>